# indicator-notifications

./: .bzrignore  .gitignore  Makefile.am  autogen.sh  configure.ac  indicator-install.sh  indicator-restart.sh  indicator-uninstall.sh  localgen.sh
data/: Makefile.am  com.canonical.indicator.datetime.gschema.xml  datetime-dialog.ui  indicator-datetime-preferences.desktop.in  indicator-datetime.service.in  indicator-example.service.in  indicator-notifications.service.in  net.launchpad.indicator.notifications.gschema.xml.in.in
data/icons/: Makefile.am
libmap/: Makefile.am  cc-timezone-map.c  cc-timezone-map.h  test-timezone.c  tz.c
po/: Makevars  POTFILES.in  POTFILES.skip  indicator-notifications.pot
src/: Makefile.am  calendar-menu-item.c  calendar-menu-item.h  datetime-interface.c  datetime-interface.h  datetime-prefs-locations.c  datetime-prefs-locations.h  datetime-prefs.c  datetime-service.c  datetime-service.xml  dbus-shared.h  dbus-spy.c  dbus-spy.h  example-interface.c  example-interface.h  example-service.c  example-service.xml  indicator-datetime.c  indicator-example.c  indicator-notifications-settings.c  indicator-notifications.c  notification-menuitem.c  notification-menuitem.h  notification.c  notification.h  notifications-interface.c  notifications-interface.h  notifications-service.c  notifications-service.xml  settings-shared.h  settings.h  timezone-completion.c  timezone-completion.h  urlregex.c  urlregex.h  utils.c  utils.h
tools/: indicator-install.sh  localgen.sh
