iconsdir = $(INDICATORICONSDIR)

icons_DATA = \
	     indicator-notification-close-select.svg \
	     indicator-notification-close-deselect.svg \
	     indicator-notification-read-dnd.svg \
	     indicator-notification-unread-dnd.svg \
	     indicator-notification-read.svg \
	     indicator-notification-unread.svg

EXTRA_DIST = $(icons_DATA)
